; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/hdb/extr_print.c_hdb_entry2string.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/hdb/extr_print.c_hdb_entry2string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@ENOMEM = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"malloc: out of memory\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @hdb_entry2string(i32 %0, i32* %1, i8** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_3__, align 8
  %10 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i8** %2, i8*** %7, align 8
  %11 = call i32* (...) @krb5_storage_emem()
  store i32* %11, i32** %10, align 8
  %12 = load i32*, i32** %10, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = load i64, i64* @ENOMEM, align 8
  %17 = call i32 @krb5_set_error_message(i32 %15, i64 %16, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %18 = load i64, i64* @ENOMEM, align 8
  store i64 %18, i64* %4, align 8
  br label %40

19:                                               ; preds = %3
  %20 = load i32, i32* %5, align 4
  %21 = load i32*, i32** %10, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i64 @entry2string_int(i32 %20, i32* %21, i32* %22)
  store i64 %23, i64* %8, align 8
  %24 = load i64, i64* %8, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %19
  %27 = load i32*, i32** %10, align 8
  %28 = call i32 @krb5_storage_free(i32* %27)
  %29 = load i64, i64* %8, align 8
  store i64 %29, i64* %4, align 8
  br label %40

30:                                               ; preds = %19
  %31 = load i32*, i32** %10, align 8
  %32 = call i32 @krb5_storage_write(i32* %31, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 1)
  %33 = load i32*, i32** %10, align 8
  %34 = call i32 @krb5_storage_to_data(i32* %33, %struct.TYPE_3__* %9)
  %35 = load i32*, i32** %10, align 8
  %36 = call i32 @krb5_storage_free(i32* %35)
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %38 = load i8*, i8** %37, align 8
  %39 = load i8**, i8*** %7, align 8
  store i8* %38, i8** %39, align 8
  store i64 0, i64* %4, align 8
  br label %40

40:                                               ; preds = %30, %26, %14
  %41 = load i64, i64* %4, align 8
  ret i64 %41
}

declare dso_local i32* @krb5_storage_emem(...) #1

declare dso_local i32 @krb5_set_error_message(i32, i64, i8*) #1

declare dso_local i64 @entry2string_int(i32, i32*, i32*) #1

declare dso_local i32 @krb5_storage_free(i32*) #1

declare dso_local i32 @krb5_storage_write(i32*, i8*, i32) #1

declare dso_local i32 @krb5_storage_to_data(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
